[package]
name = "forexpros_wss"
version = "0.2.3"
authors = ["Supot Chainiramitkul <bingli224@gmail.com>"]
edition = "2021"

keywords = ["websocket", "websockets", "async", "tokio", "serde"]
caterogies = ["asynchronus", "network-programming", "web-programming", "web-programming::websocket"]

[lib]
name = "forexpros_wss"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = [ 'derive' ] }
serde_json = "1.0.85"

futures = "0.3.24"
futures-util = "0.3.24"

tokio = { version = "1.21.0", features = [ 'rt', 'rt-multi-thread', 'time' ] }

tungstenite = "0.17.3"
tokio-tungstenite = { version = "0.17.2", features = [ "native-tls" ] }

rand = '0.8.5'

#[dev-dependencies]
regex = "1.6.0"
